--- a/app/common/header.html
+++ b/app/common/header.html
@@ -30,8 +30,8 @@
 			<div class="bg">
 			</div>
 			<ul class="conmn list1">
-					<li><a href="#">NEX旗舰版</a></li>
-					<li><a href="#">NEX $ NEX屏幕指纹版</a></li>
+				<li><a href="#">NEX旗舰版</a></li>
+				<li><a href="#">NEX $ NEX屏幕指纹版</a></li>
 			</ul>
 		</ul>
 		<ul>
@@ -152,7 +152,7 @@
 				<li><a href="#"><i class="iconfont icon-k-gwc"></i>购物车</a></li>
 				<li><a href="#"><i class="iconfont icon-cd"></i>我的订单</a></li>
 				<li><a href="#"><i class="iconfont icon-bb"></i>我的商城</a></li>
-				<li><a href="login.html"><i class="iconfont icon-k-wm"></i>登录/注册</a></li>
+				<li><a href="http://localhost/githhub534241247/app/register.html"><i class="iconfont icon-k-wm"></i>登录/注册</a></li>
 			</ul>
 		</div>
 	</div>
