--- a/app/particulars.html
+++ b/app/particulars.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<<<<<<< HEAD
+
 
 <head>
 	<meta charset="UTF-8">
@@ -24,61 +24,22 @@
 		</div>
 		<div class="shop_main">
 			<div class="shop_left">
-				<!-- <ul class="f_left">
-					<li class="active"><img src="static/images/particulars/left_big01.png" /></li>
-					<li><img src="static/images/particulars/left_big02.png" /></li>
-					<li><img src="static/images/particulars/left_big03.png" /></li>
-					<li><img src="static/images/particulars/left_big04.png" /></li>
-					<li><img src="static/images/particulars/left_big05.png" /></li>
-					<div class="_xuan"></div>
-				</ul> -->
-				<!-- <ul class="f_right">
-					<li class="_datu"><img src="static/images/particulars/left_big01.png" /></li>
-					<li><img src="static/images/particulars/left_big02.png" /></li>
-					<li><img src="static/images/particulars/left_big03.png" /></li>
-					<li><img src="static/images/particulars/left_big04.png" /></li>
-					<li><img src="static/images/particulars/left_big05.png" /></li>
-				</ul>
-				<div class="ol_list">
-					<ol>
-						<li class="_xiaotu"><img src="static/images/particulars/left_mini01.png" /></li>
-						<li><img src="static/images/particulars/left_mini02.png" /></li>
-						<li><img src="static/images/particulars/left_mini03.png" /></li>
-						<li><img src="static/images/particulars/left_mini04.png" /></li>
-						<li><img src="static/images/particulars/left_mini05.png" /></li>
-					</ol> -->
-
 				<button class="right"><i></i></button>
 				<button class="left"><i></i></button>
-=======
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-		<link rel="stylesheet" type="text/css" href="static/css/reset.css"/>
-		<link rel="stylesheet" type="text/css" href="static/css/iconfont.css"/>
-		<link rel="stylesheet" type="text/css" href="static/css/commn.css"/>
-		<link rel="stylesheet" type="text/css" href="static/css/particulars.css"/>
-	</head>
-	<body>
-		<div class="header_wrapper"></div>
-		<div class="shop content">
-			<div class="shop_top">
-				<a href="http://localhost:3456/home.html">商城首页 <i class="iconfont icon-k-yjt"></i></a>
-				<a href="#">智能手机<i class="iconfont icon-k-yjt"></i></a>
-				<a href="#" style="color: #BBBBBB;">NEX</a>
->>>>>>> 534ca15578f9bda602612c3860b8a58d3633256c
 			</div>
 			<div class="shop_right">
 				<div class="right_main">
 					<div class="right_top">
-						<h1 style="font-size: 30px; line-height: 40px;">NEX旗舰版8GB+128GB 星钻黑</h1>
+						<h1 style="font-size: 30px; line-height: 40px; height: 40px"></h1>
 						<p><span style="color: #F51919; font-size: 14px;">【享12期免息】</span>
 							高通骁龙845处理器，新一代零界全面屏，屏幕指纹解锁，屏幕发声科技，8G超大运存，Jovi语音助手</p>
 					</div>
 					<div class="right_price">
 						<div class="price">
-							<span style="color: #E60012; font-size: 36px; display: block; margin-top: 35px;">¥4298</span>
-							<span style="color: #969696; font-size: 14px;">¥4498</span>
+							<span class="span_1" style="color: #E60012; font-size: 36px; display: block; margin-top: 35px;">
+
+							</span>
+							<span class="span_2" style="color: #969696; font-size: 14px;"></span>
 						</div>
 						<ul class="ticket" style="width: 60%;">
 							<li><span>领券</span><b>订单满500减20</b><a href="#">立即领取 ></a></li>
@@ -103,12 +64,12 @@
 									<div class="intro">
 										<i></i>可以使用换新鼓励金
 										<p style="line-height: 30px;">换新鼓励金通过参加以旧换新回收旧手机以后获得，旧手机享受额外补贴 <a href="#" style="color: #14ADDF; margin-left: 25px">现在换机
-												></a></p>
+											</a></p>
 									</div>
 								</div>
 							</span>
 						</div>
-						<ul class="versions" style="margin-top: 30px;">
+						<ul id="vers_c" class="versions" style="margin-top: 30px;">
 							<p>版本</p>
 							<li>全网通6G + 128G版本</li>
 							<li>全网通8G + 256G旗舰版</li>
@@ -155,7 +116,8 @@
 						</ul>
 						<ul class="versions amount" style="height: 170px; position: relative;">
 							<p>数量</p>
-							<li style="width: 80px; border:0; margin-left: 76px;"><input type="text" value="1" />
+							<li style="width: 80px; border:0; margin-left: 76px;">
+								<input class="amount_nume" type="text" value="0" />
 								<span style="width: 200px; height: 40px; line-height: 40px; float: left;">（限量五部）</span>
 							</li>
 							<button class="amount_left">-</button>
@@ -168,32 +130,13 @@
 							<li>¥358.16 x 12期（无息）</li>
 						</ul>
 					</div>
-					<ul class="submit">
-						<li style="background: #FF7800;"><a href="javascript:;">加入购物车</a></li>
-						<li style="background: #F51919;"><a href="javascript:;">立即购买</a></li>
+					<ul id="submit" class="submit">
+						<li style="background: #FF7800;"><a class="shop_buy" href="javascript:;">加入购物车</a></li>
+						<li style="background: #F51919;"><a class="shop_new" href="http://localhost/githhub534241247/app/shop_car.html">立即购买</a></li>
 					</ul>
 				</div>
 			</div>
 		</div>
-<<<<<<< HEAD
-	</div>
-	<div class="main_wrapper">
-		<div class="main">
-			<ul class="main_top content">
-				<li><a href="#">详细信息</a></li>
-				<li><a href="#">包装及规格参数</a></li>
-				<li><a href="#">评价 (8871)</a></li>
-				<li><a href="#">评测</a></li>
-				<li><a href="#">售后服务</a></li>
-			</ul>
-			<ul class="abstract">
-				<li><img src="static/images/particulars/abstract01.jpg" /></li>
-				<ul class="present content">
-					<li><img src="static/images/particulars/abstract02.jpg" /></li>
-					<li><img src="static/images/particulars/abstract03.jpg" /></li>
-					<li><img src="static/images/particulars/abstract04.jpg" /></li>
-					<li><img src="static/images/particulars/abstract05.jpg" /></li>
-=======
 		<div class="main_wrapper">
 			<div class="main">
 				<ul class="main_top content">
@@ -207,7 +150,7 @@
 					<li><img src="static/images/particulars/abstract01.jpg" /></li>
 					<ul class="present content">
 						<li><img src="static/images/particulars/abstract02.jpg" /></li>
-						<li><img src="static/images/particulars/abstract03.jpg" /></li>	
+						<li><img src="static/images/particulars/abstract03.jpg" /></li>
 						<li><img src="static/images/particulars/abstract04.jpg" /></li>
 						<li><img src="static/images/particulars/abstract05.jpg" /></li>
 					</ul>
@@ -227,29 +170,11 @@
 					<li><img src="static/images/particulars/abstract19.jpg" /></li>
 					<li><img src="static/images/particulars/abstract20.jpg" /></li>
 					<li><img src="static/images/particulars/abstract21.jpg" /></li>
->>>>>>> 534ca15578f9bda602612c3860b8a58d3633256c
-				</ul>
-				<li><img src="static/images/particulars/abstract06.jpg" /></li>
-				<li><img src="static/images/particulars/abstract07.jpg" /></li>
-				<li><img src="static/images/particulars/abstract08.jpg" /></li>
-			</ul>
+			</div>
 		</div>
-<<<<<<< HEAD
-	</div>
-	<footer class="footer_wrapper">
-
-	</footer>
+		<footer class="footer_wrapper"></footer>
 </body>
 
-=======
-		<footer class="footer_wrapper"></footer>
-		<script src="static/js/jquery.js"></script>
-		<script>
-			$('.header_wrapper').load("common/header.html");
-			$('.footer_wrapper').load("common/footer.html");
-		</script>
-	</body>
->>>>>>> 534ca15578f9bda602612c3860b8a58d3633256c
 </html>
 <script src="static/js/jquery.js"></script>
 <script src="static/js/Ajax.js"></script>
@@ -261,4 +186,8 @@
 	$('.header_wrapper').load("common/header.html");
 	$('.footer_wrapper').load("common/footer.html");
 	img_xr.init();
+	shop.init();
+	// 设置值
+	localStorage.val = window.location.hash;
+	$(".shop_new").attr("href", "http://localhost/githhub534241247/app/shop_car.html" + localStorage.val);
 </script>
