--- a/app/login.html
+++ b/app/login.html
@@ -17,15 +17,12 @@
 				<a href="http://localhost:3456/index1.html"><img src="static/images/login/vivo-logo.jpg" /></a>
 				<span>vivo账号注册</span>
 			</div>
-			<form action="http://localhost:8888/githhub534241247/server/php/login.php" method="post" class="box" autocomplete="on">
+			<form action="http://localhost/githhub534241247/server/php/login.php" method="post" class="box" autocomplete="on">
 				<div class="form-group has-success code">
 					<label for="username"></label>
 					<input type="text" class="form-control" id="tel" name="tel" placeholder="请输入手机号" data-error="请输入正确的手机号">
 					<p class=""></p>
 					<span id="change" class='' style="display: block;"></span>
-					<!-- <a href="http://localhost/githhub534241247/app/register.html"
-						 id="denglu_a" class='' style="display : block;"></a> -->
-					<!-- <a href="http://localhost/githhub534241247/app/register.html" class=""></a> -->
 					<button class="codebtn">获取验证码</button>
 				</div>
 				<div class="form-group has-success">
@@ -49,12 +46,9 @@
 			<span>COPYRIGHT © 1996-2017 ALLRIGHTS RESE-RVED.粤ICP备05100288号</span>
 		</div>
 	</div>
-	<!-- <script src="static/js/jquery.js"></script> -->
-	<!-- <script src="static/js/Ajax.js"></script> -->
 	<script src="static/js/ajax1.js"></script>
 	<script src="static/js/once1.js"></script>
 	<script src="static/js/login.js"></script>
-	<!-- <script src="static/js/once.js"></script> -->
 	<script>
 		getInput.init('.box');
 	</script>
